# waf

./: Cargo.toml  Containerfile.debian  Dockerfile.linuxvm  README.md  SUMMARY.md  build.rs  docker-compose.yaml
.cargo/: config.toml
conf/: basic.conf
docs/: README.md  architecture.md
docs/docs/: security-features.md
docs/journey/challenges/: README.md  dunning-kruger-effect.md
docs/journey/design-journey/: README.md  ideation.md  the-logo.md
docs/journey/lessons-learned/: README.md
docs/journey/milestones/: README.md  inspiration.md
docs/journey/milestones/nginx/: README.md
docs/manual/installation/: building-nginx-from-source.md
docs/other/: references.md  roadmap.md
journey/challenges/: bindgen.md  c-+-rust.md  dependency-hell.md  rust-in-2-days.md
journey/design-journey/: waf-design.md
journey/lessons-learned/: scale-means-dx.md  shipping-an-mvp.md
journey/milestones/: stack.md
journey/milestones/nginx/: modules-in-depth.md
manual/: configuration.md
src/: bindings.rs  lib.rs  main.rs  wrapper.rs
