[package]
name = "waf"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.1"
git2 = "0.18.1"

[dependencies]
ngx = "0.4.1"

[lib]
name = "waf"
path = "src/lib.rs"
crate-type = ["cdylib"] # generate output binary as DLL with *.so
